welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:11: error: missing arguments for method fizzBuzz in class fizzBuzz;
follow this method with `_' if you want to treat it as a partially applied function
return fizzBuzz
       ^